--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "astro": "^3.5.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
