--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/react": "^3.0.6",
     "@astrojs/tailwind": "^5.0.2",
-    "@tippyjs/react": "^4.2.6",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "astro": "^3.5.7",
+    "astro-tooltips": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
