--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/react": "^3.0.6",
     "@astrojs/tailwind": "^5.0.2",
+    "@nanostores/react": "^0.7.1",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "astro": "^3.5.7",
     "astro-tooltips": "^0.6.2",
+    "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
